concord_examples/tests/ui/old_client_scheme_host_removed.rs
use concord_macros::api;

api! {
    client OldClientRootSyntax {
        scheme: https,
        host: "example.com"
    }
}

fn main() {}
